--- a/public/CSS/Auth.css
+++ b/public/CSS/Auth.css
@@ -3,11 +3,11 @@
 .text-pink{color: rgb(218, 85, 107);}
 
 body {
-	background: linear-gradient(-50deg, #fad9f9, #fc84b2, #1bbaf4);
+	background: linear-gradient(30deg, #5A7334, #f2f2f2, #102601);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
-    font-family: 'Quicksand', sans-serif;
+  font-family: 'Figtree', sans-serif;
 }
 
 @keyframes gradient {
@@ -28,10 +28,10 @@ body {
 
 .login-box{
     position:relative;
-    top: 30%;
-    left: 35%;
+    top: 20%;
+    
     width: 500px;
-    height: 380px;
+    height: 450px;
     background-color: #ffffffab;
     padding: 10px;
     border-radius: 3px;
@@ -52,7 +52,7 @@ body {
     margin: 0 25px;
     padding: 0 20px;
     text-decoration: none;
-    color: #ff0195;
+    color: #A7BF50;
     font-weight: bolder;
     font-size: 20px;
     -webkit-transition: all 0.1s linear;
@@ -60,15 +60,15 @@ body {
     transition: all 0.1s linear;
   }
   .lb-header .active{
-    color: #029f5b;
+    color: #102601;
     font-size: 18px;
   }
   @media(max-width:991.98px){
     .login-box{position:fixed;
-    top: 40%;
+    
   bottom: auto;
-left: auto;
-right: auto}
+left: -15%;
+right: 40%}
     
   }
 
@@ -152,21 +152,21 @@ right: auto}
   }
   .u-form-group button{
     width:50%;
-    background-color: #00a035;
+    background-color: #5A7334;
     border: none;
     outline: none;
     color: #fff;
     font-size: 14px;
     font-weight: normal;
     padding: 14px 0;
-    border-radius: 2px;
+    border-radius: 10px;
     text-transform: uppercase;
   }
   .forgot-password{
     width:50%;
     text-align: left;
     text-decoration: none;
-    color: #892ef9;
+    color: #A7BF50;
     font-size: 1rem;
     transition-duration: 0.4s;
   }
