--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -16,16 +16,18 @@
     }
 } */
 .navbarlink{
-    color: rgb(111, 0, 255) !important;
+    color: #B6BF73 !important;
     transition-duration: 0.3s !important;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-bottom: 0;
     padding-bottom: 0;
+    
     text-decoration: none;}
 .navbarlink :hover {
-    color: rgb(0, 0, 0) !important;
+    color: #F2F2F2!important;
 }
+.nav-link-font{font-size: larger;}
 
 .underline-blue {background-color: rgb(0, 0, 0) ;
     height: 2px;
@@ -34,3 +36,5 @@
     transform: scaleX(0);
     transition-duration:0.3s ;}
 .navbarlink :hover .underline-blue{transform: scaleX(1);}
+
+.bg-nav{background-color: #254021;}
